py-hpack: updated to 4.1.0
4.1.0 (2025-01-22)

**API Changes (Backward Incompatible)**

- Support for Python 3.6 has been removed.
- Support for Python 3.7 has been removed.
- Support for Python 3.8 has been removed.
- Renamed `InvalidTableIndex` exception to `InvalidTableIndexError`.

**API Changes (Backward Compatible)**

- Support for Python 3.9 has been added.
- Support for Python 3.10 has been added.
- Support for Python 3.11 has been added.
- Support for Python 3.12 has been added.
- Support for Python 3.13 has been added.
- Optimized bytes encoding of headers.
- Updated packaging and testing infrastructure.
- Code cleanup and linting.
- Added type hints.

--- a/net/py-hpack/Makefile
+++ b/net/py-hpack/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.9 2024/11/11 07:28:48 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/23 08:26:23 adam Exp $
 
-DISTNAME=	hpack-4.0.0
+DISTNAME=	hpack-4.1.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=h/hpack/}
 
@@ -12,16 +11,14 @@ COMMENT=	Pure-Python HPACK header compression
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis-[0-9]*:../../devel/py-hypothesis
+TEST_DEPENDS+=	${PYPKGPREFIX}-hypothesis>=6.119.4:../../devel/py-hypothesis
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=6.0.0:../../devel/py-test-cov
+TEST_DEPENDS+=	${PYPKGPREFIX}-test-xdist>=3.6.1:../../devel/py-test-xdist
 
 USE_LANGUAGES=	# none
 
-PYSETUPTESTTARGET=	pytest
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
 pre-test:
-	${MKDIR} ${WRKSRC}/test/test_fixtures/raw-data
+	${MKDIR} ${WRKSRC}/tests/test_fixtures/raw-data
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
