--- a/chat/ircd-hybrid/Makefile
+++ b/chat/ircd-hybrid/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.97 2024/11/14 22:18:50 wiz Exp $
+# $NetBSD: Makefile,v 1.98 2025/01/23 11:22:24 fox Exp $
 
-DISTNAME=	ircd-hybrid-8.2.45
-PKGREVISION=	3
+DISTNAME=	ircd-hybrid-8.2.46
 CATEGORIES=	chat
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=ircd-hybrid/}
 EXTRACT_SUFX=	.tgz
