--- a/net/coturn/Makefile
+++ b/net/coturn/Makefile
@@ -1,55 +1,42 @@
-# $NetBSD: Makefile,v 1.1 2025/01/15 14:13:39 manu Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/23 16:24:02 adam Exp $
 
 DISTNAME=	coturn-4.6.3
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=coturn/}
-GITHUB_PROJECT=	coturn
 
 MAINTAINER=	kethzer.dr@gmail.com
 HOMEPAGE=	https://github.com/coturn/coturn
 COMMENT=	VoIP media traffic NAT traversal server
 LICENSE=	modified-bsd
 
-USE_LANGUAGES=	c c++
-
-USE_TOOLS+=	pkg-config
-USE_LIBTOOL=	yes
-
-HAS_CONFIGURE=	yes
+USE_LANGUAGES=		c c++
+USE_LIBTOOL=		yes
+USE_TOOLS+=		pkg-config
+HAS_CONFIGURE=		yes
+CONFIGURE_ARGS+=	--disable-rpath
+CONFIGURE_ARGS+=	--localstatedir ${VARBASE}/turnserver
+CONFIGURE_ARGS+=	--prefix ${PREFIX}
 
 # Pass cflags/libs
-CONFIGURE_ENV+=		PTHREAD_LIBS=-pthread TURN_DISABLE_RPATH=1
 CONFIGURE_ENV+=		LIBEVENT_OPENSSL_CFLAGS="-I${BUILDLINK_PREFIX.libevent}/include"
 CONFIGURE_ENV+=		LIBEVENT_OPENSSL_LIBS="-L${BUILDLINK_PREFIX.libevent}/lib -levent_openssl -levent"
 
-# Configure installation paths.
-# \todo Why is this not setting PREFIX?
-CONFIGURE_ENV+=		BINDIR=${PREFIX}/bin
-CONFIGURE_ENV+=		LIBDIR=${PREFIX}/lib
-CONFIGURE_ENV+=		MANPREFIX=${PREFIX}
-CONFIGURE_ENV+=		CONFDIR=${PKG_SYSCONFDIR}
-CONFIGURE_ENV+=		INCLUDEDIR=${PREFIX}/include
-CONFIGURE_ENV+=		LOCALSTATEDIR=${PREFIX}/var/turnserver
-CONFIGURE_ENV+=		DOCSDIR=${PREFIX}/share/doc/coturn
-CONFIGURE_ENV+=		EXAMPLESDIR=${PREFIX}/share/examples/coturn
-CONFIGURE_ENV+=		TURNDBDIR=${VARBASE}/turnserver
-CONFIGURE_ENV+=		TURNINCLUDEDIR=${PREFIX}/include/turn
-CONFIGURE_ENV+=		TURN_NO_MYSQL=1
+CFLAGS+=	-Wno-stringop-truncation
 
-CFLAGS+=		-Wno-stringop-truncation
-
-COTURN_CONFIG=		${PKG_SYSCONFDIR}/turnserver.conf
-COTURN_EGDIR=		${PKG_SYSCONFDIR}
-CONF_FILES+=		${COTURN_EGDIR}/turnserver.conf.default ${COTURN_CONFIG}
-
-RCD_SCRIPTS=		turnserver
-
-WRKSRC=		${WRKDIR}/${DISTNAME}
+COTURN_CONFIG=	${PKG_SYSCONFDIR}/turnserver.conf
+COTURN_EGDIR=	${PREFIX}/share/examples/turnserver
+CONF_FILES=	${COTURN_EGDIR}/turnserver.conf.default ${COTURN_CONFIG}
 
 BUILD_DEFS+=	VARBASE
+RCD_SCRIPTS=	turnserver
 
 .include "options.mk"
 
-.include "../../security/openssl/buildlink3.mk"
+post-install:
+	${MV} ${DESTDIR}${PKG_SYSCONFDIR}/turnserver.conf.default \
+		${DESTDIR}${COTURN_EGDIR}/turnserver.conf.default
+
 .include "../../devel/libevent/buildlink3.mk"
+.include "../../security/openssl/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
