--- a/databases/py-tortoise-orm/Makefile
+++ b/databases/py-tortoise-orm/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.30 2025/01/22 13:43:39 wiz Exp $
+# $NetBSD: Makefile,v 1.31 2025/01/23 16:39:37 adam Exp $
 
-DISTNAME=	tortoise_orm-0.22.2
+DISTNAME=	tortoise_orm-0.24.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
-PKGREVISION=	1
 CATEGORIES=	databases python
 MASTER_SITES=	${MASTER_SITE_PYPI:=t/tortoise-orm/}
 
@@ -14,7 +13,7 @@ LICENSE=	apache-2.0
 TOOL_DEPENDS+=	${PYPKGPREFIX}-poetry-core>=2.0.0:../../devel/py-poetry-core
 DEPENDS+=	${PYPKGPREFIX}-aiosqlite>=0.16.0:../../databases/py-aiosqlite
 DEPENDS+=	${PYPKGPREFIX}-iso8601>=2.1.0:../../time/py-iso8601
-DEPENDS+=	${PYPKGPREFIX}-pypika-tortoise>=0.3.0:../../databases/py-pypika-tortoise
+DEPENDS+=	${PYPKGPREFIX}-pypika-tortoise>=0.5.0:../../databases/py-pypika-tortoise
 DEPENDS+=	${PYPKGPREFIX}-pytz>=2020.4:../../time/py-pytz
 # accel
 DEPENDS+=	${PYPKGPREFIX}-ciso8601>=2.1.2:../../time/py-ciso8601
