--- a/net/coturn/Makefile
+++ b/net/coturn/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.5 2025/01/23 17:33:16 gdt Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/23 17:47:20 gdt Exp $
 
 DISTNAME=	coturn-4.6.3
 PKGREVISION=	7
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=coturn/}
 
-MAINTAINER=	kethzer.dr@gmail.com
-#MAINTAINER+=	gdt@NetBSD.org
+MAINTAINER=	gdt@NetBSD.org
+#MAINTAINER+=	kethzer.dr@gmail.com
 HOMEPAGE=	https://github.com/coturn/coturn
 COMMENT=	TURN and STUN server (for VoIP/webrtc)
 LICENSE=	modified-bsd
@@ -63,6 +63,10 @@ CONFIGURE_ARGS+=	--localstatedir=${COTURN_DATA}
 
 # \todo Why is there a db installed in /var?  If not within PREFIX we don't pick it up,
 # but it seems like a bug.
+
+# Upstream installs some files twice (examples and docs).  This is not
+# causing real trouble, but it's a bug.
+#   https://github.com/coturn/coturn/issues/1631
 
 .include "options.mk"
 
