--- a/misc/py-installer/Makefile
+++ b/misc/py-installer/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.3 2023/10/25 22:21:38 wiz Exp $
+# $NetBSD: Makefile,v 1.4 2025/01/23 19:31:09 riastradh Exp $
 
 DISTNAME=	installer-0.7.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	misc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=i/installer/}
 
@@ -20,9 +20,16 @@ USE_LANGUAGES=	# none
 PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 INSTALL_ENV+=	PYTHONPATH=${WRKSRC}/src
+TEST_ENV+=	PYTHONPATH=${WRKSRC}/src
 
 do-install:
 	cd ${WRKSRC} && ${SETENV} ${INSTALL_ENV} ${PYTHONBIN} -m installer --destdir ${DESTDIR} --prefix ${PREFIX} dist/*.whl
+
+# XXX Hack -- the patch phase leaves .orig files around which Python
+# dutifully picks up and installs because it doesn't use any explicit
+# lists of files or any patterns to exclude *.orig.
+post-install:
+	${RM} -f ${DESTDIR}${PREFIX}/${PYSITELIB}/installer/*.orig
 
 do-test:
 	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} pytest-${PYVERSSUFFIX} tests
