devel/py-boost: Install cmake files needed by downstream packages.
This uses an intermediate package devel/py-boost-cmake which is
agnostic to the Python version, because boost/cmake now expects to
find unversioned files boost_python-config.cmake and
boost_python-config-version.cmake in canonical locations in order to
find Python-versioned stuff.

It's all kind of a mess -- and the py-boost-cmake package does a lot
of redundant work to build boost python libraries that it doesn't
install.  But it's currently only used by finance/ledger (and
finance/ledger32), so this mess doesn't affect much and if you want
to clean it up there's not much fallout to worry about.

--- a/meta-pkgs/boost/Makefile.common
+++ b/meta-pkgs/boost/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.110 2025/01/09 09:25:14 riastradh Exp $
+# $NetBSD: Makefile.common,v 1.111 2025/01/23 19:37:41 riastradh Exp $
 #
 # used by devel/boost-build/Makefile
 # used by devel/boost-docs/Makefile
@@ -7,6 +7,7 @@
 # used by devel/boost-libs/Makefile
 # used by devel/boost-mpi/Makefile
 # used by devel/py-boost/Makefile
+# used by devel/py-boost-cmake/Makefile
 
 BOOST_PACKAGE?=		undefined
 BOOST_COMMENT?=		undefined
