--- a/devel/py-boost/Makefile
+++ b/devel/py-boost/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2024/12/29 14:53:13 adam Exp $
+# $NetBSD: Makefile,v 1.25 2025/01/23 19:37:41 riastradh Exp $
 
 BOOST_PACKAGE=		python
 BOOST_COMMENT=		(Boost.Python binary library)
@@ -9,6 +9,7 @@ INSTALLATION_DIRS+=	lib
 .include "../../meta-pkgs/boost/Makefile.common"
 
 PKGNAME=		${PYPKGPREFIX}-boost-${BOOST_VERSION}
+PKGREVISION=		1
 
 BJAM_ARGS+=		--user-config=${WRKSRC}/user-config.jam
 BJAM_ARGS+=		--with-python
@@ -24,16 +25,31 @@ post-configure:
 
 do-build: bjam-build
 
+do-install: boost-install-cmake
 do-install: boost-install-libs
 
 PLIST_SUBST+=	PYVER=${_PYTHON_VERSION}
+PLIST_SUBST+=	PYVERSSUFFIX=${PYVERSSUFFIX}
 
 BUILDLINK_TRANSFORM.SunOS+=	rm:-lutil
 
 # These are already in boost-libs
+#
+# XXX Can we convince boost to simply not install these parts for this
+# package?
 post-install:
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/Boost-*/*.cmake
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/BoostDetectToolset-*.cmake
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/boost_container-*/*.cmake
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/boost_graph-*/*.cmake
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/boost_headers-*/*.cmake
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/boost_numpy-*/*-config-version.cmake
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/boost_numpy-*/*-config.cmake
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/boost_python-*/*-config-version.cmake
+	${RM} -f ${DESTDIR}${PREFIX}/lib/cmake/boost_python-*/*-config.cmake
 	${RM} -f ${DESTDIR}${PREFIX}/lib/libboost_*container.*
 	${RM} -f ${DESTDIR}${PREFIX}/lib/libboost_*graph.*
 
+.include "../../devel/py-boost-cmake/buildlink3.mk"
 .include "../../math/py-numpy/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
