sysupgrade: update config file so it works on NetBSD 10+
From Robert Bagdan via wip.

Bump PKGREVISION.

--- a/sysutils/sysupgrade/patches/patch-default.conf
+++ b/sysutils/sysupgrade/patches/patch-default.conf
@@ -1,4 +1,4 @@
-$NetBSD: patch-default.conf,v 1.3 2021/03/14 08:44:01 nia Exp $
+$NetBSD: patch-default.conf,v 1.4 2025/01/23 20:11:36 wiz Exp $
 
 * Use more useful example URLs
 * Add variable for archive file extension
@@ -17,7 +17,7 @@ $NetBSD: patch-default.conf,v 1.3 2021/03/14 08:44:01 nia Exp $
 +# Upgrade to the latest snapshot of the current branch
 +#RELEASEDIR="https://nycdn.netbsd.org/pub/NetBSD-daily/HEAD/latest/$(uname -m)"
 +# Upgrade to the latest snapshot of a stable branch
-+RELEASEDIR="https://nycdn.netbsd.org/pub/NetBSD-daily/netbsd-9/latest/$(uname -m)"
++RELEASEDIR="https://nycdn.netbsd.org/pub/NetBSD-daily/netbsd-$(uname -r | cut -d. -f1)/latest/$(uname -m)"
  
  # Name of the kernel to be installed.
  KERNEL=AUTO  # Guess from /netbsd (requires config(1)).
