--- a/devel/boost-headers/Makefile
+++ b/devel/boost-headers/Makefile
@@ -1,8 +1,10 @@
-# $NetBSD: Makefile,v 1.66 2024/10/04 03:28:40 ryoon Exp $
+# $NetBSD: Makefile,v 1.67 2025/01/23 20:56:00 wiz Exp $
 
 BOOST_PACKAGE=		headers
 BOOST_COMMENT=		(build-time headers)
 BOOST_CONFIG=		generate
+
+PKGREVISION=		1
 
 .include "../../meta-pkgs/boost/Makefile.common"
 
