devel/extra-cmake-modules: Use buildlink3.mk, not TOOL_DEPENDS.
This one is borderline: should it be BUILD_DEPENDS or TOOL_DEPENDS?
It doesn't appear to vary depending on the build environment, so it
doesn't meaningfully describe the cross-builder vs the target system.
It is used only at build-time, but it doesn't have any native
executables -- they're just source code cmake scripts.

For now, it is convenient to use a buildlink3.mk file because this
enables us to explicitly expose only files under share/ECM/ -- and
not other random files installed in the prefix -- via buildlink3 to
keep dependent package builds clean.  Eventually we should have the
same mechanism for TOOL_DEPENDS but that day has not yet come.

This change creates a new use of BUILDLINK_DEPMETHOD build for
extra-cmake-modules, which is a priori risky.  Fortunately,
extra-cmake-modules has no libraries, so this is unlikely to cause
trouble.

--- a/inputmethod/libime/Makefile
+++ b/inputmethod/libime/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2024/12/29 15:09:54 adam Exp $
+# $NetBSD: Makefile,v 1.20 2025/01/23 23:27:28 riastradh Exp $
 
 DISTNAME=	libime-1.1.5
 PKGREVISION=	2
@@ -10,8 +10,6 @@ MAINTAINER=	ryoon@NetBSD.org
 HOMEPAGE=	https://github.com/fcitx/libime
 COMMENT=	Generic inputmethod implementation library
 LICENSE=	gnu-lgpl-v2.1
-
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
 
 DICTDISTFILES+=	lm_sc.arpa-20230712.tar.xz
 DICTDISTFILES+=	dict-20230412.tar.xz
@@ -36,8 +34,10 @@ post-extract:
 .endfor
 
 .include "../../devel/cmake/build.mk"
+
 .include "../../archivers/zstd/buildlink3.mk"
 .include "../../devel/boost-libs/buildlink3.mk"
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../inputmethod/fcitx5/buildlink3.mk"
 .include "../../lang/python/application.mk"
 .include "../../mk/bsd.pkg.mk"
