--- a/devel/kdiff3/Makefile
+++ b/devel/kdiff3/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.112 2024/11/14 22:19:24 wiz Exp $
+# $NetBSD: Makefile,v 1.113 2025/01/23 23:27:25 riastradh Exp $
 
 DISTNAME=	kdiff3-1.10.7
 PKGREVISION=	7
@@ -20,10 +20,11 @@ USE_CXX_FEATURES+=	c++17
 
 BUILDLINK_TRANSFORM+=	rm:-Wl,--fatal-warnings
 
-TOOL_DEPENDS+=		extra-cmake-modules>=5.10.0:../../devel/extra-cmake-modules
 TOOLS_DEPENDS.cmake=	cmake>=3.1:../../devel/cmake
 
 .include "../../devel/boost-headers/buildlink3.mk"
+BUILDLINK_API_DEPENDS.extra-cmake-modules+=	extra-cmake-modules>=5.10.0
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
 BUILDLINK_API_DEPENDS.kcoreaddons+=	kcoreaddons>=5.80.0
 .include "../../devel/kcoreaddons/buildlink3.mk"
