--- a/devel/plasma-wayland-protocols/Makefile
+++ b/devel/plasma-wayland-protocols/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2024/05/26 10:22:25 markd Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/23 23:27:25 riastradh Exp $
 
 DISTNAME=	plasma-wayland-protocols-1.13.0
 CATEGORIES=	devel kde
@@ -10,10 +10,10 @@ HOMEPAGE=	https://github.com/kde/plasma-wayland-protocols
 COMMENT=	Plasma Specific Protocols for Wayland
 LICENSE=	gnu-lgpl-v2.1
 
-TOOL_DEPENDS+=	extra-cmake-modules>=5.60.0:../../devel/extra-cmake-modules
-
 USE_LANGUAGES=	c c++
 
 .include "../../devel/cmake/build.mk"
 
+BUILDLINK_API_DEPENDS.extra-cmake-modules+=	extra-cmake-modules>=5.60.0
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
