--- a/graphics/kdiagram/Makefile
+++ b/graphics/kdiagram/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2024/11/14 22:20:10 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/23 23:27:26 riastradh Exp $
 
 DISTNAME=	kdiagram-2.8.0
 PKGREVISION=	9
@@ -11,13 +11,14 @@ HOMEPAGE=	https://www.kde.org/
 COMMENT=	Powerful libraries for creating business diagrams
 LICENSE=	gnu-gpl-v2
 
-TOOL_DEPENDS+=	extra-cmake-modules>=5.60.0:../../devel/extra-cmake-modules
-
 USE_LANGUAGES=	c c++
 
 CMAKE_CONFIGURE_ARGS+=	-DECM_MKSPECS_INSTALL_DIR=${QTDIR}/mkspecs/modules
 
 .include "../../devel/cmake/build.mk"
+
+BUILDLINK_API_DEPENDS.extra-cmake-modules+=	extra-cmake-modules>=5.60.0
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../x11/qt5-qtbase/buildlink3.mk"
 .include "../../x11/qt5-qttools/buildlink3.mk"
 .include "../../x11/qt5-qtsvg/buildlink3.mk"
