--- a/inputmethod/fcitx-qt5/Makefile
+++ b/inputmethod/fcitx-qt5/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.31 2024/11/14 22:20:22 wiz Exp $
+# $NetBSD: Makefile,v 1.32 2025/01/23 23:27:26 riastradh Exp $
 
 DISTNAME=	fcitx-qt5-1.2.3
 PKGREVISION=	28
@@ -11,8 +11,6 @@ HOMEPAGE=	https://download.fcitx-im.org/fcitx-qt5/
 COMMENT=	Fcitx Qt5 Input Context
 LICENSE=	gnu-gpl-v2 OR modified-bsd
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 USE_TOOLS+=	pkg-config
 USE_CMAKE=	yes
 USE_LANGUAGES=	c c++
@@ -20,6 +18,7 @@ USE_LANGUAGES=	c c++
 LDFLAGS+=	-lintl
 
 .include "../../devel/gettext-lib/buildlink3.mk"
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../inputmethod/fcitx/buildlink3.mk"
 .include "../../x11/qt5-qtbase/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
