--- a/inputmethod/fcitx5-chewing/Makefile
+++ b/inputmethod/fcitx5-chewing/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2024/11/14 22:20:22 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2025/01/23 23:27:26 riastradh Exp $
 
 DISTNAME=	fcitx5-chewing-5.1.1
 PKGREVISION=	4
@@ -11,13 +11,13 @@ HOMEPAGE=	https://github.com/fcitx/fcitx5-chewing
 COMMENT=	Chewing engine for Fcitx5
 LICENSE=	gnu-gpl-v2
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 USE_PKGLOCALEDIR=	yes
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		pkg-config
 
 .include "../../devel/cmake/build.mk"
+
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../inputmethod/fcitx5/buildlink3.mk"
 .include "../../inputmethod/libchewing/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
