--- a/inputmethod/fcitx5-configtool/Makefile
+++ b/inputmethod/fcitx5-configtool/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2024/11/14 22:20:22 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2025/01/23 23:27:27 riastradh Exp $
 
 DISTNAME=	fcitx5-configtool-5.1.3
 PKGREVISION=	5
@@ -15,8 +15,6 @@ USE_PKGLOCALEDIR=	yes
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		pkg-config
 
-TOOL_DEPENDS+=		extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 CMAKE_CONFIGURE_ARGS+=		-DENABLE_KCM=off
 
 # CMAKE_INSTALL_RPATH does not work.
@@ -26,6 +24,7 @@ SUBST_MESSAGE.rpath=	Setting RPATH
 SUBST_FILES.rpath+=	src/migrator/lib/CMakeLists.txt
 SUBST_VARS.rpath+=	COMPILER_RPATH_FLAG PREFIX QTDIR
 
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 #.include "../../devel/kcoreaddons/buildlink3.mk"
 #.include "../../devel/kdeclarative/buildlink3.mk"
 #.include "../../devel/ki18n/buildlink3.mk"
