--- a/inputmethod/fcitx5-kkc/Makefile
+++ b/inputmethod/fcitx5-kkc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2024/11/14 22:20:23 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/23 23:27:27 riastradh Exp $
 
 DISTNAME=	fcitx5-kkc-5.1.1
 PKGREVISION=	5
@@ -10,8 +10,6 @@ MAINTAINER=	ryoon@NetBSD.org
 HOMEPAGE=	https://github.com/fcitx/fcitx5-kkc
 COMMENT=	libkkc input method support for fcitx5
 LICENSE=	gnu-gpl-v3
-
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
 
 # for std::underlying_type_t
 # TODO: check if '8' is correct
@@ -25,7 +23,9 @@ USE_LANGUAGES=		c c++11
 USE_TOOLS+=		pkg-config
 
 .include "../../devel/cmake/build.mk"
+
 .include "../../converters/libkkc/buildlink3.mk"
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../inputmethod/fcitx5-qt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
