--- a/inputmethod/fcitx5-libthai/Makefile
+++ b/inputmethod/fcitx5-libthai/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2024/02/10 12:06:47 ryoon Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/23 23:27:27 riastradh Exp $
 
 DISTNAME=	fcitx5-libthai-5.1.2
 CATEGORIES=	inputmethod
@@ -9,8 +9,6 @@ MAINTAINER=	ryoon@NetBSD.org
 HOMEPAGE=	https://github.com/fcitx/fcitx5-libthai
 COMMENT=	Thai language input method for Fcitx5
 LICENSE=	gnu-gpl-v2
-
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
 
 USE_PKGLOCALEDIR=	yes
 USE_LANGUAGES=		c c++
@@ -24,6 +22,7 @@ USE_GNU_ICONV=		yes
 .endif
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/cmake/build.mk"
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../devel/libthai/buildlink3.mk"
 .include "../../inputmethod/fcitx5/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
