--- a/inputmethod/fcitx5-m17n/Makefile
+++ b/inputmethod/fcitx5-m17n/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2024/11/14 22:20:23 wiz Exp $
+# $NetBSD: Makefile,v 1.25 2025/01/23 23:27:27 riastradh Exp $
 
 DISTNAME=	fcitx5-m17n-5.1.0
 PKGREVISION=	6
@@ -11,13 +11,13 @@ HOMEPAGE=	https://github.com/fcitx/fcitx5-m17n
 COMMENT=	Wrapper library of m17n for Fcitx5
 LICENSE=	gnu-lgpl-v2.1
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 USE_PKGLOCALEDIR=	yes
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		pkg-config
 
 .include "../../devel/cmake/build.mk"
+
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../devel/m17n-lib/buildlink3.mk"
 .include "../../inputmethod/fcitx5/buildlink3.mk"
 .include "../../textproc/fmtlib/buildlink3.mk"
