--- a/inputmethod/fcitx5-qt/Makefile
+++ b/inputmethod/fcitx5-qt/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2024/11/14 22:20:23 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2025/01/23 23:27:27 riastradh Exp $
 
 DISTNAME=	fcitx5-qt-5.1.4
 PKGREVISION=	5
@@ -11,8 +11,6 @@ HOMEPAGE=	https://download.fcitx-im.org/fcitx5/fcitx5-qt/
 COMMENT=	Qt library and IM module for fcitx5
 LICENSE=	gnu-lgpl-v2.1
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 USE_PKGLOCALEDIR=	yes
 USE_LANGUAGES=		c c++
 
@@ -21,6 +19,8 @@ CMAKE_CONFIGURE_ARGS+=		-DENABLE_QT5=on
 CMAKE_CONFIGURE_ARGS+=		-DENABLE_QT6=off
 
 .include "../../devel/cmake/build.mk"
+
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../inputmethod/fcitx5/buildlink3.mk"
 .include "../../x11/qt5-qtbase/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
