--- a/inputmethod/fcitx5-rime/Makefile
+++ b/inputmethod/fcitx5-rime/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2024/02/10 12:14:03 ryoon Exp $
+# $NetBSD: Makefile,v 1.6 2025/01/23 23:27:27 riastradh Exp $
 
 DISTNAME=	fcitx5-rime-5.1.4
 CATEGORIES=	inputmethod
@@ -10,7 +10,6 @@ HOMEPAGE=	https://github.com/fcitx/fcitx5-rime
 COMMENT=	RIME traditional Chinese input method for Fcitx5
 LICENSE=	gnu-lgpl-v2.1
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
 DEPENDS+=	rime-luna-pinyin-[0-9]*:../../inputmethod/rime-luna-pinyin
 
 USE_PKGLOCALEDIR=	yes
@@ -18,6 +17,8 @@ USE_LANGUAGES=		c c++
 USE_TOOLS+=		pkg-config
 
 .include "../../devel/cmake/build.mk"
+
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../inputmethod/fcitx5/buildlink3.mk"
 .include "../../inputmethod/librime/buildlink3.mk"
