--- a/inputmethod/fcitx5-sayura/Makefile
+++ b/inputmethod/fcitx5-sayura/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2024/02/10 12:15:36 ryoon Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/23 23:27:28 riastradh Exp $
 
 DISTNAME=	fcitx5-sayura-5.1.1
 CATEGORIES=	inputmethod
@@ -10,13 +10,13 @@ HOMEPAGE=	https://github.com/fcitx/fcitx5-sayura
 COMMENT=	Sinhala input method for Fcitx5
 LICENSE=	gnu-gpl-v2
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 USE_PKGLOCALEDIR=	yes
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		pkg-config
 
 .include "../../devel/cmake/build.mk"
+
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../inputmethod/fcitx5/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
