--- a/inputmethod/fcitx5-skk/Makefile
+++ b/inputmethod/fcitx5-skk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2024/11/14 22:20:23 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2025/01/23 23:27:28 riastradh Exp $
 
 DISTNAME=	fcitx5-skk-5.1.1
 PKGREVISION=	5
@@ -11,13 +11,13 @@ HOMEPAGE=	https://github.com/fcitx/fcitx5-skk
 COMMENT=	SKK Kana-Kanji inputmethod for fcitx5
 LICENSE=	gnu-gpl-v3
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 USE_PKGLOCALEDIR=	yes
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		pkg-config
 
 .include "../../devel/cmake/build.mk"
+
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../devel/glib2/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../inputmethod/fcitx5-qt/buildlink3.mk"
