--- a/inputmethod/fcitx5-table-other/Makefile
+++ b/inputmethod/fcitx5-table-other/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2024/12/29 15:09:54 adam Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/23 23:27:28 riastradh Exp $
 
 DISTNAME=	fcitx5-table-other-5.1.0
 PKGREVISION=	2
@@ -11,8 +11,6 @@ HOMEPAGE=	https://download.fcitx-im.org/fcitx5/fcitx5-table-other/
 COMMENT=	Non-Chinese tables for Fcitx5
 LICENSE=	gnu-gpl-v3
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 DEPENDS+=	fcitx5-[0-9]*:../../inputmethod/fcitx5
 DEPENDS+=	libime-[0-9]*:../../inputmethod/libime
 
@@ -20,6 +18,8 @@ USE_PKGLOCALEDIR=	yes
 USE_LANGUAGES=		c c++
 
 .include "../../devel/cmake/build.mk"
+
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../devel/boost-libs/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
