--- a/meta-pkgs/kde/Makefile.common
+++ b/meta-pkgs/kde/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.11 2024/08/21 11:21:41 markd Exp $
+# $NetBSD: Makefile.common,v 1.12 2025/01/23 23:27:29 riastradh Exp $
 #
 # used by meta-pkgs/kde/applications.mk
 # used by meta-pkgs/kde/kf5.mk
@@ -8,7 +8,8 @@
 
 MAINTAINER?=	markd@NetBSD.org
 
-TOOL_DEPENDS+= extra-cmake-modules>=5.19.0:../../devel/extra-cmake-modules
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
+BUILDLINK_API_DEPENDS.extra-cmake-modules+=	extra-cmake-modules>=5.19.0
 
 USE_LANGUAGES+=	c c++
 CMAKE_BUILD_DIR=	_KDE_build
