--- a/security/gpgmepp/Makefile
+++ b/security/gpgmepp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.42 2024/11/14 22:21:29 wiz Exp $
+# $NetBSD: Makefile,v 1.43 2025/01/23 23:27:29 riastradh Exp $
 
 DISTNAME=	gpgmepp-15.12.2
 PKGREVISION=	37
@@ -11,14 +11,14 @@ HOMEPAGE=	https://projects.kde.org/gpgmepp
 COMMENT=	C++ bindings/wrapper for gpgme
 LICENSE=	gnu-lgpl-v2.1
 
-TOOL_DEPENDS+=	extra-cmake-modules>=5.19.0:../../devel/extra-cmake-modules
-
 USE_LANGUAGES=	c c++
 
 CMAKE_CONFIGURE_ARGS+=	-DKDE_INSTALL_USE_QT_SYS_PATHS=ON
 
 .include "../../devel/cmake/build.mk"
 .include "../../devel/boost-headers/buildlink3.mk"
+BUILDLINK_API_DEPENDS.extra-cmake-modules+=	extra-cmake-modules>=5.19.0
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../security/gpgme/buildlink3.mk"
 .include "../../x11/qt5-qtbase/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
