--- a/x11/xcb-imdkit/Makefile
+++ b/x11/xcb-imdkit/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2024/02/10 08:55:26 ryoon Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/23 23:27:30 riastradh Exp $
 
 DISTNAME=	xcb-imdkit-1.0.6
 CATEGORIES=	x11
@@ -10,8 +10,6 @@ HOMEPAGE=	https://github.com/fcitx/xcb-imdkit
 COMMENT=	Implementation of xim protocol in xcb
 LICENSE=	gnu-lgpl-v2
 
-TOOL_DEPENDS+=	extra-cmake-modules-[0-9]*:../../devel/extra-cmake-modules
-
 USE_CMAKE=	yes
 USE_TOOLS+=	pkg-config
 USE_LANGUAGES+=	c c++
@@ -20,6 +18,7 @@ PKGCONFIG_OVERRIDE+=	src/xcb-imdkit.pc.in
 
 BUILDLINK_TRANSFORM.SunOS+=	rm:-Wl,--as-needed
 
+.include "../../devel/extra-cmake-modules/buildlink3.mk"
 .include "../../devel/uthash/buildlink3.mk"
 .include "../../x11/libxcb/buildlink3.mk"
 .include "../../x11/xcb-util/buildlink3.mk"
