fonts/uw-ttyp0: Needs mkfontscale tool.
Resolves:

===> Installing for uw-ttyp0-1.3nb5
=> Generating pre-install file lists
/usr/bin/install -d -o pbulk -g pbulk -m 755 /tmp/pkgbuild/2024Q4/fonts/uw-ttyp0/work/.destdir/pkg/2024Q4/share/fonts/X11/uw-ttyp0
/usr/bin/install -c -o pbulk -g pbulk -m 644   genpcf/t0-11-uni.pcf.gz  [...] /tmp/pkgbuild/2024Q4/fonts/uw-ttyp0/work/.destdir/pkg/2024Q4/share/fonts/X11/uw-ttyp0
mkfontscale /tmp/pkgbuild/2024Q4/fonts/uw-ttyp0/work/.destdir/pkg/2024Q4/share/fonts/X11/uw-ttyp0
gmake: mkfontscale: No such file or directory
gmake: *** [Makefile:198: install] Error 127
*** Error code 2

--- a/fonts/uw-ttyp0/Makefile
+++ b/fonts/uw-ttyp0/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2025/01/21 11:00:14 nia Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/24 14:51:19 riastradh Exp $
 
 DISTNAME=	uw-ttyp0-1.3
-PKGREVISION=	5
+PKGREVISION=	6
 CATEGORIES=	fonts
 MASTER_SITES=	https://people.mpi-inf.mpg.de/~uwe/misc/uw-ttyp0/
 
@@ -12,7 +12,7 @@ LICENSE=	ttyp0-license AND mit
 
 TOOL_DEPENDS+=	bdftopcf-[0-9]*:../../fonts/bdftopcf
 
-USE_TOOLS+=	gmake perl gzip
+USE_TOOLS+=	mkfontscale gmake perl gzip
 USE_LANGUAGES=	# none
 
 HAS_CONFIGURE=	yes
