games/luanti: Needs libXi.
Resolves:

[ 11%] Building CXX object irr/src/CMakeFiles/IRROTHEROBJ.dir/CIrrDeviceLinux.cpp.o
In file included from /tmp/pkgbuild/2024Q4/games/luanti/work/minetest-5.10.0/irr/src/CIrrDeviceLinux.cpp:5:0:
/tmp/pkgbuild/2024Q4/games/luanti/work/minetest-5.10.0/irr/src/CIrrDeviceLinux.h:22:10: fatal error: X11/extensions/XInput2.h: No such file or directory
 #include <X11/extensions/XInput2.h>
          ^~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
*** [irr/src/CMakeFiles/IRROTHEROBJ.dir/CIrrDeviceLinux.cpp.o] Error code 1

--- a/games/luanti/Makefile
+++ b/games/luanti/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.1 2024/11/16 01:57:06 ktnb Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/24 14:56:56 riastradh Exp $
 
 DISTNAME=	luanti-5.10.0
+PKGREVISION=	1
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_GITHUB:=minetest/}
 GITHUB_TAG=	${PKGVERSION_NOREV}
@@ -59,6 +60,7 @@ CMAKE_CONFIGURE_ARGS+=	-DENABLE_LUAJIT=FALSE
 .include "../../www/curl/buildlink3.mk"
 .include "../../x11/libX11/buildlink3.mk"
 .include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/libXi/buildlink3.mk"
 .include "../../x11/libICE/buildlink3.mk"
 .include "../../x11/libSM/buildlink3.mk"
 .include "../../x11/libXxf86vm/buildlink3.mk"
