net/netatalk4: Specify the docbook path.
Resolves:

===> Installing for netatalk-4.0.6nb4
=> Generating pre-install file lists
=> Creating installation directories
ninja: Entering directory `output'
[0/1] Installing files.
...
rm -r /home/riastradh/pkgsrc/current/work/net/netatalk4/work/.destdir/home/riastradh/pkgsrc/current/pkg/share/doc/netatalk/htmldocs
rm: /home/riastradh/pkgsrc/current/work/net/netatalk4/work/.destdir/home/riastradh/pkgsrc/current/pkg/share/doc/netatalk/htmldocs: No such file or directory

XXX Should do this through a buildlink directory so it won't be
polluted by other packages that might be installed, except it's for
TOOL_DEPENDS, not BULID_DEPENDS.

--- a/net/netatalk4/Makefile
+++ b/net/netatalk4/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2025/01/12 16:13:10 hauke Exp $
+# $NetBSD: Makefile,v 1.9 2025/01/25 10:27:31 riastradh Exp $
 
 GITHUB_PROJECT=	netatalk
 GITHUB_TAG=	refs/tags/${DISTNAME}
@@ -6,7 +6,7 @@ DISTNAME=	netatalk-4-0-6
 
 PKGVER=		${GITHUB_TAG:C/^.+netatalk-//:C/-/./g}
 PKGNAME=	${DISTNAME:C/-[0-9].*$//}-${PKGVER}
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=Netatalk/}
 
@@ -20,6 +20,7 @@ WRKSRC=			${WRKDIR}/${GITHUB_PROJECT}-${DISTNAME}
 USE_TOOLS+=		pkg-config perl
 TOOL_DEPENDS+=		libxslt-[0-9]*:../../textproc/libxslt
 TOOL_DEPENDS+=		docbook-xsl>=1.79.2:../../textproc/docbook-xsl
+MESON_ARGS+=		-Dwith-docbook-path=${TOOLBASE:Q}/share/xsl/docbook
 
 PKG_SYSCONFSUBDIR=	netatalk
 
