x11/qt5-qtwebkit: Build with U_HIDE_DRAFT_API to hide ICU C++17isms.
pkg/59028: qt5-qtwebkit doesn't build

Resolves, e.g.:

In file included from /usr/pkg/include/unicode/unorm2.h:35,
                 from /usr/pkg/include/unicode/unorm.h:25,
                 from /usr/pkg/include/unicode/ucol.h:17,
                 from /scratch/x11/qt5-qtwebkit/work/qtwebkit-5.212.0-alpha4/Source/WTF/wtf/unicode/icu/CollatorICU.cpp:37:
/usr/pkg/include/unicode/uset.h:1655:10: error: 'u16string_view' in namespace 'std' does not name a type; did you mean 'u16string'?
 1655 |     std::u16string_view operator*() const {
      |          ^~~~~~~~~~~~~~
      |          u16string

--- a/x11/qt5-qtwebkit/Makefile
+++ b/x11/qt5-qtwebkit/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.128 2025/01/24 11:54:37 wiz Exp $
+# $NetBSD: Makefile,v 1.129 2025/01/25 21:06:23 riastradh Exp $
 
 QTWKVERSION=	5.212.0-alpha4
 DISTNAME=	qtwebkit-${QTWKVERSION}
@@ -24,6 +24,10 @@ USE_TOOLS+=		bison perl:build pkg-config
 CMAKE_INSTALL_PREFIX=	${QTDIR}
 CMAKE_INSTALL_NAME_DIR=	${QTDIR}/lib
 TEST_TARGET=		test
+
+# XXX Workaround for icu-76 whose header files require C++17 unless you
+# define U_HIDE_DRAFT_API.  pkg/59028: qt5-qtwebkit doesn't build
+CXXFLAGS+=		-DU_HIDE_DRAFT_API
 
 # Source/JavaScriptCore/offlineasm/parser.rb:587:in `block in parseSequence': undefined method `=~'
 RUBY_VERSIONS_ACCEPTED=		31
