py-atpublic: updated to 5.1
5.1
Drop official support for Python 3.8, add support for Python 3.13.

--- a/devel/py-atpublic/Makefile
+++ b/devel/py-atpublic/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.13 2024/08/07 20:16:22 adam Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/27 09:40:29 adam Exp $
 
-DISTNAME=	atpublic-5.0
+DISTNAME=	atpublic-5.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=a/atpublic/}
@@ -11,10 +11,9 @@ COMMENT=	@public decorator for Python
 LICENSE=	apache-2.0
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-hatchling-[0-9]*:../../devel/py-hatchling
+TEST_DEPENDS+=	${PYPKGPREFIX}-sybil-[0-9]*:../../devel/py-sybil
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
