--- a/security/hydra/patches/patch-hydra-gtk_src_Makefile.in
+++ b/security/hydra/patches/patch-hydra-gtk_src_Makefile.in
@@ -1,4 +1,6 @@
-$NetBSD: patch-hydra-gtk_src_Makefile.in,v 1.1 2013/09/20 23:10:12 joerg Exp $
+$NetBSD: patch-hydra-gtk_src_Makefile.in,v 1.2 2025/01/27 13:37:31 wiz Exp $
+
+Correctly link against gtk2.
 
 --- hydra-gtk/src/Makefile.in.orig	2013-09-20 22:05:22.000000000 +0000
 +++ hydra-gtk/src/Makefile.in
